syntax = "proto3";

package accountfollower;

message AccountFollowerRequest {
    string account_id = 1;
    string follower_id = 2;
}

message AccountFollowerRequestsRequest {
    string account_id = 1;
    int32 offset = 2;
    int32 limit = 3;
}

message AccountFollowerResponse {
    string account_id = 1;
    string follower_id = 2;
    bool is_following = 3;
    bool accepted = 4;
    string created_at = 5;
    string updated_at = 6;
}

message AccountFollowerCountMetadataResponse {
    int32 followers_count = 1;
    int32 following_count = 2;
}

message AccountFollowersRequest {
    string account_id = 1;
    repeated string other_account_ids = 2;
}

message AccountFollowersResponse {
    repeated AccountFollowerResponse followers = 1;
}